# vgapride-rs

./: .gitignore  Cargo.toml
src/: flag.rs  lib.rs  main.rs  parse.rs  svg.rs
