[package]
name = "vgapride"
authors = ["Florian Schulze <mail@florian-schulze.net>"]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "2"
concolor-clap = "0.1"
env_logger = "0.10"
log = "0.4"
nom = "7"
thiserror = "1"
